import {
  Entity,
  PrimaryGeneratedColumn,
  Column,
  CreateDateColumn,
  UpdateDateColumn,
  OneToMany,
  ManyToOne,
  JoinColumn,
} from 'typeorm';
import { Evaluation } from './evaluation.entity';
import { Award } from '../../awards/entities/award.entity';

@Entity('paintings')
export class Painting {
  @PrimaryGeneratedColumn('uuid', { name: 'painting_id' })
  paintingId: string;

  @Column({ nullable: true, name: 'round_id' })
  roundId: string;

  @Column({ nullable: true, name: 'contest_id' })
  contestId: number;

  @Column({ nullable: true, name: 'competitor_id' })
  competitorId: string;

  @Column({ type: 'text', nullable: true, name: 'description' })
  description: string;

  @Column({ length: 255, name: 'title' })
  title: string;

  @Column({ type: 'varchar', nullable: true, name: 'image_url' })
  imageUrl: string;

  @Column({ type: 'timestamp', nullable: true, name: 'submission_date' })
  submissionDate: Date;

  @Column({ type: 'boolean', default: null, name: 'is_passed' })
  isPassed: boolean;

  @Column({ type: 'varchar', length: 50, default: 'PENDING', name: 'status' })
  status: string;

  @Column({ nullable: true, name: 'award_id' })
  awardId: number | null;

  @CreateDateColumn({ type: 'timestamp', name: 'created_at' })
  createdAt: Date;

  @UpdateDateColumn({ type: 'timestamp', name: 'updated_at' })
  updatedAt: Date;

  @OneToMany(() => Evaluation, (evaluation) => evaluation.painting)
  evaluations: Evaluation[];

  @ManyToOne(() => Award, (award) => award.paintings)
  @JoinColumn({ name: 'award_id' })
  award: Award;
}
